--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,12 +2,13 @@ name: Build and Deploy Blazor WebAssembly to GitHub Pages
 
 on:
   push:
-    branches: ["main"]
+    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    name: Build and Deploy
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -17,10 +18,7 @@ jobs:
         with:
           dotnet-version: '8.0.x'
 
-      - name: Restore dependencies
-        run: dotnet restore
-
-      - name: Build and publish
+      - name: Publish Blazor WebAssembly App
         run: dotnet publish TextLoreAdventure/TextLoreAdventure.csproj -c Release -o release
 
       - name: Add .nojekyll
@@ -31,4 +29,3 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: release/wwwroot
-          publish_branch: gh-pages
