--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           dotnet-version: '8.0.x'
 
       - name: Publish Blazor WebAssembly App
-        run: dotnet publish TextLoreAdventure/TextLoreAdventure.csproj -c Release -o release
+        run: dotnet publish TextLoreAdventure.csproj -c Release -o release
 
       - name: Add .nojekyll
         run: touch release/wwwroot/.nojekyll
