--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,34 @@
-name: Deploy Blazor to GitHub Pages
+name: Build and Deploy Blazor WebAssembly to GitHub Pages
 
 on:
   push:
-    branches: [main]
+    branches: [ "main" ]
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Setup .NET
+      - name: Setup .NET SDK
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.0.x'
 
-      - name: Publish Blazor WebAssembly
-        run: |
-          dotnet restore
-          dotnet publish TextLoreAdventure.csproj -c Release -o release
+      - name: Publish Blazor WebAssembly app
+        run: dotnet publish ./TextLoreAdventure.csproj -c Release
 
-      - name: Check publish output
-        run: ls -R release
-
-      - name: Add .nojekyll file
-        run: touch release/.nojekyll
+      - name: Add .nojekyll to disable Jekyll on GitHub Pages
+        run: touch TextLoreAdventure/bin/Release/net8.0/publish/wwwroot/.nojekyll
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: release
+          publish_dir: TextLoreAdventure/bin/Release/net8.0/publish/wwwroot
