--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,39 +1,16 @@
-name: Build and Deploy Blazor WebAssembly to GitHub Pages
-
-on:
-  push:
-    branches: [ "main" ]
-  workflow_dispatch:
-
-permissions:
-  contents: write
-
-jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup .NET SDK
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '8.0.x'
-
       - name: Publish Blazor WebAssembly app
         run: dotnet publish TextLoreAdventure.csproj -c Release
 
       - name: Ensure publish output exists
-        run: ls -la TextLoreAdventure/bin/Release/net8.0/publish/wwwroot
+        run: ls -la bin/Release/net8.0/publish/wwwroot
 
       - name: Add .nojekyll to disable Jekyll on GitHub Pages
         run: |
-          mkdir -p TextLoreAdventure/bin/Release/net8.0/publish/wwwroot
-          touch TextLoreAdventure/bin/Release/net8.0/publish/wwwroot/.nojekyll
+          mkdir -p bin/Release/net8.0/publish/wwwroot
+          touch bin/Release/net8.0/publish/wwwroot/.nojekyll
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: TextLoreAdventure/bin/Release/net8.0/publish/wwwroot
+          publish_dir: bin/Release/net8.0/publish/wwwroot
